--- a/index.html
+++ b/index.html
@@ -59,12 +59,149 @@
           </div>
           <div class="header-two__middle">
             <div class="header-two__middle__search">
-                
+              <a href="">All Categories</a>
+              <input type="text" placeholder="What does you need?" />
+              <i class="fa-solid fa-magnifying-glass"></i>
             </div>
           </div>
-
+          <div class="header-two__right">
+            <div class="header-two__right__icons">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
+              <span>$150.00</span>
+            </div>
+          </div>
         </div>
       </div>
     </header>
+
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar__top">
+          <ul>
+            <li class="grey">
+              <i class="fa-solid fa-bars"></i>All departments
+              <i class="fa-solid fa-chevron-down"></i>
+            </li>
+            <li class="active">HOME</li>
+            <li>SHOP</li>
+            <li>COLLECTION</li>
+            <li>BLOG</li>
+            <li>CONTACT</li>
+            <li>PAGES</li>
+          </ul>
+        </div>
+        <div class="navbar__bottom">
+          <a href="">MENU <i class="fa-solid fa-bars"></i></a>
+        </div>
+      </div>
+    </nav>
+<main>
+
+
+
+
+
+
+
+  
+  <div class="partners">
+      <div class="container">
+        <div class="row">
+          <img
+            src="https://preview.colorlib.com/theme/fashi/img/logo-carousel/logo-1.png"
+            alt=""
+          />
+          <img
+            src="https://preview.colorlib.com/theme/fashi/img/logo-carousel/logo-2.png"
+            alt=""
+          />
+          <img
+            src="https://preview.colorlib.com/theme/fashi/img/logo-carousel/logo-3.png"
+            alt=""
+          />
+          <img
+            src="https://preview.colorlib.com/theme/fashi/img/logo-carousel/logo-4.png"
+            alt=""
+          />
+          <img
+            src="https://preview.colorlib.com/theme/fashi/img/logo-carousel/logo-5.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+</main>
+    
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer__left">
+              <img
+                src="https://preview.colorlib.com/theme/fashi/img/footer-logo.png"
+                alt=""
+              />
+            <ul >
+              <li>Address: 60-49 Road 11378 New York</li>
+              <li>Phone: +65 11.188.888</li>
+              <li>Email: hello.colorlib@gmail.com</li>
+            </ul>
+
+            <ul class="sosial">
+              <li><i class="fa-brands fa-facebook"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-pinterest"></i></li>
+            </ul>
+          </div>
+          <div class="footer__mid">
+            <h5>Information</h5>
+            <ul>
+              <li>About Us</li>
+              <li>Checkout</li>
+              <li>Contact</li>
+              <li>Serivius</li>
+            </ul>
+          </div>
+          <div class="footer__mid">
+            <h5>My Account</h5>
+            <ul>
+              <li>My Account</li>
+              <li>Contact</li>
+              <li>Shopping Cart</li>
+              <li>Shop</li>
+            </ul>
+          </div>
+          <div class="footer__right">
+            <h5>Join Our Newsletter Now</h5>
+            <p>Get E-mail updates about our latest shop and special offers.</p>
+
+            <form class="footer__form">
+              <input type="text" placeholder="Enter Your Mail" />
+              <a class="btn">SUBSCRIBE</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="copyright">
+      <div class="container">
+        <div class="row">
+          <div class="copyright__text">
+            Copyright © 2024 All rights reserved | This template is made with
+            <i class="fa fa-heart-o" aria-hidden="true"></i> by
+            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          </div>
+          <div class="copyright__pic">
+            <img
+              src="https://preview.colorlib.com/theme/fashi/img/payment-method.png.webp"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
